# rec-service

./: .gitignore  CMakeLists.txt  README.md
doc/: .directory  61850_test(新版).rar  README.md  ivs-64.cid  ivs.cid  xj.icd
include/: ry_inc.h
include/hk/: DataType.h  HCNetSDK.h  LinuxPlayM4.h  PlayM4.h  plaympeg4.h
include/iec61850/: stack_config.h
lib/: mosquitto.lib  mosquittopp.lib
src/: 61850_static.c  MQTTAsync_publish.c  config.h  iec61850.c  iec61850.h  ini.h  main.c  main.h  model.c  model.h  ry_config.h  ry_error.h  ry_iec61850.c  ry_iec61850.h  ry_mqtt.c  ry_mqtt.h  ry_msg.c  ry_msg.h  ry_msg_sub.c  ry_msg_sub.h  ry_nvr_mgr.c  ry_nvr_mgr.h  ry_timer.c  ry_timer.h  ry_video_adapter.c  ry_video_adapter.h  server_example_dynamic.c
src/dh_nvr/: dh_nvr.cpp
src/dny-model/: XJ-61850.c  XJ-61850.h
src/hk_nvr/: hk_nvr.cpp
src/ini/: ini.c
src/nvr_adps/: hk_nvr.cpp
src/test/: 61850-cfg.c  test_dynamic.c
src/ut/: utlist.h
